--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hint_name">Name</string>
     <string name="title_activity_temp">Temp</string>
     <string name="Register_txt">Account erstellen</string>
+    <string name="desc_herausf">Begebe Dich auf eine Höhe von 200m über dem Meeresspiegel und erreiche einen Wurf von 5m.</string>
 </resources>
